--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>hello would me chrisshop.com</title>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+ <meta http-equiv="X-UA-Compatible" content="chrome=1">
+ <meta name="viewport" content="width"=device-widh, initial-scale="1"/>    
+ <meta name="google-signin-client_id" content="185184976746-kt2be4jnfh3j9kt5a80ui7hp97cb349m.apps.googleusercontent.com">
+ <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet.css">
+ <link rel="stylesheet" href="https://console.developers.google.com/apis/api/run.googleapis.com/overview?project="dns.chrishop.com">
+ <link href="stylesheet" type="http://www
+  dns.chrisshop.com/style.css">
 
   <!-- Google Tag Manager -->
   <script>
@@ -44,8 +52,8 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <h1>Welcome to chrisshop</h1>
-  <p>Click the button below to visit my website:</p>
-
+  <p>Click the button below to visit my website please connect deta :</p>
+        
   <!-- Link to your domain -->
   <a class="button" href="http://www.chrisshop.com/" target="_blank">
     Go to chrisshop
