--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <h1>Welcome to chrisshop</h1>
+  <h1>Welcome to chrisshop hello google analytics </h1>
   <p>Click the button below to visit my website please connect deta :</p>
         
   <!-- Link to your domain -->
