--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
   <p>Click the button below to visit my website please connect deta :</p>
         
   <!-- Link to your domain -->
-  <a class="button" href="http://www.chrisshop.com/" target="_blank">
+  <a class="button" href="https://www.chrisshop.com/" target="_blank">
     Go to chrisshop
   </a>
 
   <script>
     // Example: auto-redirect after 3 seconds
     setTimeout(() => {
-      window.location.href = "http://www.chrisshop.com/";
+      window.location.href = "http://www.dns.chrisshop.com/jar";
     }, 3000);
   </script>
 </body>
