--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-km">
 <head>
   <meta charset="UTF-8">
-  <title>hello would me chrisshop.com</title>
+  <title>hello would me chrisshop</title>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <meta http-equiv="X-UA-Compatible" content="chrome=1">
  <meta name="viewport" content="width"=device-widh, initial-scale="1"/>    
