--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <meta name="google-signin-client_id" content="185184976746-kt2be4jnfh3j9kt5a80ui7hp97cb349m.apps.googleusercontent.com">
  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet.css">
  <link rel="stylesheet" href="https://console.developers.google.com/apis/api/run.googleapis.com/overview?project="dns.chrishop.com">
- <link href="stylesheet" type="http://www
+ <link href="stylesheet" type="https://www
   dns.chrisshop.com/style.css">
 
   <!-- Google Tag Manager -->
@@ -62,7 +62,7 @@
   <script>
     // Example: auto-redirect after 3 seconds
     setTimeout(() => {
-      window.location.href = "http://www.dns.chrisshop.com/jar";
+      window.location.href = "https://www.dns.chrisshop.com";
     }, 3000);
   </script>
 </body>
