--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <meta name="google-signin-client_id" content="185184976746-kt2be4jnfh3j9kt5a80ui7hp97cb349m.apps.googleusercontent.com">
  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet.css">
  <link rel="stylesheet" href="https://console.developers.google.com/apis/api/run.googleapis.com/overview?project="dns.chrishop.com">
- <link href="stylesheet" type="http://www
+ <link href="stylesheet" type="https://www
   dns.chrisshop.com/jar/style.css">
 
   <!-- Google Tag Manager -->
@@ -55,14 +55,14 @@
   <p>Click the button below to visit my website please connect deta :</p>
         
   <!-- Link to your domain -->
-  <a class="button" href="http://www.dns.chrisshop.com/jar" target="_blank">
+  <a class="button" href="https://www.dns.chrisshop.com/jar" target="_blank">
     Go to chrisshop
   </a>
 
   <script>
     // Example: auto-redirect after 3 seconds
     setTimeout(() => {
-      window.location.href = "http://www.dns.chrisshop.com/jar";
+      window.location.href = "https://www.dns.chrisshop.com/jar";
     }, 3000);
   </script>
 </body>
