--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet.css">
  <link rel="stylesheet" href="https://console.developers.google.com/apis/api/run.googleapis.com/overview?project="dns.chrishop.com">
  <link href="stylesheet" type="https://www
-  dns.chrisshop.com/jar/style.css">
+  dns.chrisshop.com/css/style.css">
 
   <!-- Google Tag Manager -->
   <script>
@@ -55,14 +55,14 @@
   <p>Click the button below to visit my website please connect deta :</p>
         
   <!-- Link to your domain -->
-  <a class="button" href="https://www.dns.chrisshop.com/jar" target="_blank">
+  <a class="button" href="https://www.dns.chrisshop.com/admin${1}" target="_blank">
     Go to chrisshop
   </a>
 
   <script>
     // Example: auto-redirect after 3 seconds
     setTimeout(() => {
-      window.location.href = "https://www.dns.chrisshop.com/jar";
+      window.location.href = "https://www.dns.chrisshop.com/laber";
     }, 3000);
   </script>
 </body>
