--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-km">
 <head>
   <meta charset="UTF-8">
-  <title>hello would me chrisshop</title>
+  <title>hello analytics please connect deta dns.chrisshop.com</title>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <meta http-equiv="X-UA-Compatible" content="chrome=1">
  <meta name="viewport" content="width"=device-widh, initial-scale="1"/>    
  <meta name="google-signin-client_id" content="185184976746-kt2be4jnfh3j9kt5a80ui7hp97cb349m.apps.googleusercontent.com">
- <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet.css">
- <link rel="stylesheet" href="https://console.developers.google.com/apis/api/run.googleapis.com/overview?project="dns.chrishop.com">
+ <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="css/stylesheet.css">
+ <link rel="stylesheet" href="https://developers.google.com/apis/api/run.googleapis.com/overview?project="">
  <link href="stylesheet" type="https://www
   dns.chrisshop.com/css/style.css">
 
@@ -55,8 +55,8 @@
   <p>Click the button below to visit my website please connect deta :</p>
         
   <!-- Link to your domain -->
-  <a class="button" href="https://www.dns.chrisshop.com/admin${1}" target="_blank">
-    Go to chrisshop
+  <a class="button" href="https://www.dns.chrisshop.com" target="_blank">
+    Go to chrisrathana
   </a>
 
   <script>
