--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-km">
 <head>
   <meta charset="UTF-8">
-  <title>hello analytics please connect deta dns.chrisshop.com</title>
+  <title>https://www.dns.chrisshop.com</title>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <meta http-equiv="X-UA-Compatible" content="chrome=1">
  <meta name="viewport" content="width"=device-widh, initial-scale="1"/>    
@@ -51,7 +51,7 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <h1>Welcome to chrisshop hello google analytics </h1>
+  <h1>Welcome to chris.rathana hello google analytics </h1>
   <p>Click the button below to visit my website please connect deta :</p>
         
   <!-- Link to your domain -->
@@ -62,7 +62,7 @@
   <script>
     // Example: auto-redirect after 3 seconds
     setTimeout(() => {
-      window.location.href = "https://www.dns.chrisshop.com/laber";
+      window.location.href = "https://www.dns.chrisshop.com/admin";
     }, 3000);
   </script>
 </body>
