--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <script>
     // Example: auto-redirect after 3 seconds
-    setTimeout(() => {
+    setTimeout((600000) => {
       window.location.href = "https://www.dns.chrisshop.com/admin";
     }, 3000);
   </script>
