--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <link rel="stylesheet" href="https://developers.google.com/apis/api/run.googleapis.com/overview?project.id="4275223308">
  <link href="stylesheet" type="https://www
   dns.chrisshop.com/css/style.css">
-
+<meta http-equiv="x-pjax-version" content="" data-turbo-track="reload">
   <!-- Google Tag Manager -->
   <script>
     (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
