--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="css/stylesheet.css">
  <link rel="stylesheet" href="https://developers.google.com/apis/api/run.googleapis.com/overview?project.id="4275223308">
  <link href="stylesheet" type="https://www
-  dns.chrisshop.com/css/style.css">
-<meta http-equiv="x-pjax-version" content="" data-turbo-track="reload">
+  dns.chrisshop.com/site/assets/css/style.css/">
+ <meta http-equiv="x-pjax-version" content="d8d18cefe42103199b2eac24125f6d10fb4ceda1" data-turbo-track="reload">
   <!-- Google Tag Manager -->
   <script>
     (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
